# infrastructure-interview-challenge

./: .gitignore  README.md  pyproject.toml
src/: rotate_secrets.py  secrets.py  stubber.py
