[tool.poetry]
name = "devops-programming-challenge"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.33.13"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["iam"], version = "^1.21.34"}
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100